--- a/css/styleDetalleProd.css
+++ b/css/styleDetalleProd.css
@@ -157,11 +157,10 @@ article.curso video{
     margin-top: 2vh;
     margin-left: 2%;
 }
-div.enlace{
+section button{
 
     position: relative;
     margin-left: 40%;
-    margin-top: 1vh;
     width: 20%;
     height: 8vh;
     background-color: rgb(248, 147, 31);
@@ -170,7 +169,6 @@ div.enlace{
     -moz-border-radius: 20px;
     -ms-border-radius: 20px;
     -o-border-radius: 20px;
-    border: solid white 2px;
     text-align: center;
     padding-top: 1vh;
     color: white ;
@@ -179,11 +177,7 @@ div.enlace{
     
 
 }
-
-div.enlace a{
-    color:white;
-}
-div.enlace:hover{
+section button:hover{
     transform: scale(1.2) ;
     -webkit-transform: scale(1.2) ;
     -moz-transform: scale(1.2) ;
