--- a/css/styleHome.css
+++ b/css/styleHome.css
@@ -1,18 +1,16 @@
 *{
     margin: 0 auto;
     box-sizing: border-box;
-    
-    
 }
 
-
+.usuarioLogueado{
+    color: red;
+}
 
 div.container-fluid {
     background-color: rgb(35, 61, 88);
     max-width: 1200px;
-    height: 120vh;
-    
-    
+    height: 120vh;        
 }
 
 ul.nav-pills li{
@@ -111,7 +109,7 @@ div.mainlogo figure img {
     margin-left: 40%; 
 
 }
-div.enlace{
+div.mainlogo button{
     position: relative;
     margin-left: 40%;
     width: 20%;
@@ -124,16 +122,15 @@ div.enlace{
     -o-border-radius: 20px;
     text-align: center;
     padding-top: 1vh;
-    border: solid white 2px;
     
 }
-div.enlace a{
+button a {
     color: white;
     font-family: "aller";
     font-size: 1.4em;
 }
 
-div.enlace:hover{
+button:hover{
     transform: scale(1.2) ;
     -webkit-transform: scale(1.2) ;
     -moz-transform: scale(1.2) ;
@@ -145,9 +142,13 @@ div.enlace:hover{
     -ms-transition: 0.6s;
     -o-transition: 0.6s;
     text-decoration: none;
-    
 }
-
+button a:hover{
+    text-decoration: none;
+}
+div.spinner-grow{
+    margin-left: 48.5%;
+}
 
 
 #redesSociales ul{
@@ -288,7 +289,7 @@ div#copy h4{
         margin-left: 23%;
         margin-top: 5vh;
         width: 55%;
-        height: 5vh;
+        height: 15vh;
         text-align: center;
         padding-top: 0vh;
         
@@ -296,7 +297,7 @@ div#copy h4{
     button#cursos a {
         position: relative;
         color: white;
-        font-size: 1.2em;
+        font-size: 1.5em;
         
     }
     div.spinner-grow{
